<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button
        android:id="@+id/clearbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:text="@string/clear"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/custombtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clearbtn"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_toRightOf="@+id/clearbtn"
        android:layout_weight="1"
        android:text="@string/custom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/draw_red_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save_color_btn"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/eraser_btn"
        android:layout_weight="1"
        android:background="#ff1100"
        app:layout_constraintBottom_toTopOf="@+id/save_color_btn"
        app:layout_constraintEnd_toStartOf="@+id/draw_blue_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/eraser_btn"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/draw_blue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/draw_red_btn"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="#001aff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/draw_red_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_color_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/draw_green_btn"
        android:layout_marginStart="24dp"
        android:layout_toRightOf="@+id/draw_blue_btn"
        android:layout_weight="1"
        android:background="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/draw_green_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/option_btn"
        app:layout_constraintTop_toBottomOf="@+id/draw_red_btn" />

    <Button
        android:id="@+id/draw_green_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="#09e653"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_color_btn"
        app:layout_constraintTop_toBottomOf="@+id/draw_blue_btn" />
    <Button
        android:id="@+id/eraser_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:text="@string/eraser"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/option_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eraser_btn"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:layout_toRightOf="@+id/eraser_btn"
        android:layout_weight="1"
        android:text="@string/option"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:layout_toRightOf="@+id/option_btn"
        android:textSize="16sp"
        android:text="@string/thickness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/simpleSeekBar"
        android:layout_width="320dp"
        android:layout_height="19dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="32dp"
        android:layout_toRightOf="@+id/txt1"
        android:max="200"
        android:progress="60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/simpleDrawingView1"
        app:layout_constraintTop_toTopOf="parent" />
    <com.example.tabswithanimatedswipe.SimpleDrawingView
        android:id="@+id/simpleDrawingView1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>